# flask-boilerplate

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
static/src/: input.css
templates/: base.html  index.html
