[project]
name = "boilerplate-flask-tailwindcss-htmx"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Fagundez",email = "bfagundez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
flask = "^3.1.1"
